serverlessservice/cdk.out/DicsCoreServiceStack.template.json
{
 "Resources": {
  "devcoredataservicevpcEBB1DA54": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/24",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "dev-core-data-service-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DicsCoreServiceStack/dev-core-data-service-vpc/Resource"
   }
  },
  "devcoredataservicevpcpublicSubnet1SubnetEA3432B8": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "10.0.0.0/25",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "DicsCoreServiceStack/dev-core-data-service-vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "devcoredataservicevpcEBB1DA54"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DicsCoreServiceStack/dev-core-data-service-vpc/publicSubnet1/Subnet"
   }
  },
  "devcoredataservicevpcpublicSubnet1RouteTable0DB60D51": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "DicsCoreServiceStack/dev-core-data-service-vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "devcoredataservicevpcEBB1DA54"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DicsCoreServiceStack/dev-core-data-service-vpc/publicSubnet1/RouteTable"
   }
  },
  "devcoredataservicevpcpublicSubnet1RouteTableAssociation0F619F04": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "devcoredataservicevpcpublicSubnet1RouteTable0DB60D51"
    },
    "SubnetId": {
     "Ref": "devcoredataservicevpcpublicSubnet1SubnetEA3432B8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DicsCoreServiceStack/dev-core-data-service-vpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "devcoredataservicevpcpublicSubnet1DefaultRoute97E9024B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "devcoredataservicevpcIGW149E5E86"
    },
    "RouteTableId": {
     "Ref": "devcoredataservicevpcpublicSubnet1RouteTable0DB60D51"
    }
   },
   "DependsOn": [
    "devcoredataservicevpcVPCGWB3396068"
   ],
   "Metadata": {
    "aws:cdk:path": "DicsCoreServiceStack/dev-core-data-service-vpc/publicSubnet1/DefaultRoute"
   }
  },
  "devcoredataservicevpcpublicSubnet2Subnet9A905344": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "10.0.0.128/25",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "DicsCoreServiceStack/dev-core-data-service-vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "devcoredataservicevpcEBB1DA54"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DicsCoreServiceStack/dev-core-data-service-vpc/publicSubnet2/Subnet"
   }
  },
  "devcoredataservicevpcpublicSubnet2RouteTable138B0D3B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "DicsCoreServiceStack/dev-core-data-service-vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "devcoredataservicevpcEBB1DA54"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DicsCoreServiceStack/dev-core-data-service-vpc/publicSubnet2/RouteTable"
   }
  },
  "devcoredataservicevpcpublicSubnet2RouteTableAssociationB2826690": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "devcoredataservicevpcpublicSubnet2RouteTable138B0D3B"
    },
    "SubnetId": {
     "Ref": "devcoredataservicevpcpublicSubnet2Subnet9A905344"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DicsCoreServiceStack/dev-core-data-service-vpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "devcoredataservicevpcpublicSubnet2DefaultRoute1A52C863": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "devcoredataservicevpcIGW149E5E86"
    },
    "RouteTableId": {
     "Ref": "devcoredataservicevpcpublicSubnet2RouteTable138B0D3B"
    }
   },
   "DependsOn": [
    "devcoredataservicevpcVPCGWB3396068"
   ],
   "Metadata": {
    "aws:cdk:path": "DicsCoreServiceStack/dev-core-data-service-vpc/publicSubnet2/DefaultRoute"
   }
  },
  "devcoredataservicevpcIGW149E5E86": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "dev-core-data-service-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DicsCoreServiceStack/dev-core-data-service-vpc/IGW"
   }
  },
  "devcoredataservicevpcVPCGWB3396068": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "devcoredataservicevpcIGW149E5E86"
    },
    "VpcId": {
     "Ref": "devcoredataservicevpcEBB1DA54"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DicsCoreServiceStack/dev-core-data-service-vpc/VPCGW"
   }
  },
  "devcoredataservicesecuritygroup59ED28F3": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "DicsCoreServiceStack/dev-core-data-service-security-group",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "allow inbound traffic from anywhere to the db on port 5432",
      "FromPort": 5432,
      "IpProtocol": "tcp",
      "ToPort": 5432
     }
    ],
    "VpcId": {
     "Ref": "devcoredataservicevpcEBB1DA54"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DicsCoreServiceStack/dev-core-data-service-security-group/Resource"
   }
  },
  "devcoredataservicedbcredentialsD4E41ADE": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"dics_admin\",\"dbname\":\"dics\"}"
    },
    "Name": "dev-core-data-service-db-credentials"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "DicsCoreServiceStack/dev-core-data-service-db-credentials/Resource"
   }
  },
  "devcoredataservicedbcredentialsAttachment898C27A8": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "devcoredataservicedbcredentialsD4E41ADE"
    },
    "TargetId": {
     "Ref": "devcoredataservicedb3541FC1D"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "DicsCoreServiceStack/dev-core-data-service-db-credentials/Attachment/Resource"
   }
  },
  "devcoredataservicedbSubnetGroup6E9A3A3D": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for dev-core-data-service-db database",
    "SubnetIds": [
     {
      "Ref": "devcoredataservicevpcpublicSubnet1SubnetEA3432B8"
     },
     {
      "Ref": "devcoredataservicevpcpublicSubnet2Subnet9A905344"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DicsCoreServiceStack/dev-core-data-service-db/SubnetGroup/Default"
   }
  },
  "devcoredataservicedb3541FC1D": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "100",
    "AutoMinorVersionUpgrade": true,
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t4g.micro",
    "DBName": "dics",
    "DBSubnetGroupName": {
     "Ref": "devcoredataservicedbSubnetGroup6E9A3A3D"
    },
    "Engine": "postgres",
    "EngineVersion": "16.4",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "devcoredataservicedbcredentialsD4E41ADE"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "devcoredataservicedbcredentialsD4E41ADE"
       },
       ":SecretString:username::}}"
      ]
     ]
    },
    "Port": "5432",
    "PubliclyAccessible": true,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "devcoredataservicesecuritygroup59ED28F3",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Snapshot",
   "DeletionPolicy": "Snapshot",
   "Metadata": {
    "aws:cdk:path": "DicsCoreServiceStack/dev-core-data-service-db/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/2WPT4uDMBDFP0vvMUULvfcPlN5ES6/LOJ1ts9WkZCaIiN99UauW3dO8+eXx3iTR8TbW8QpqjvD2jEpT6DYXwKeCmr9awkS31xeqw7e9pgeVhqI0mIfCkvRsUZkLQhcoSlr4wnbMDg2IcXY29+JshbwlOYFQDc275r3tRAAfFVlROWHwRpqTd+E1FHyCTvkb6/YIAgUw5YSeRE3r2bKARVLjUXPEcf8PTNZO8ZDBFVi4k9ftWNnHjuMC/k7yceFs+PvSdSojdsHj8ONJdypt5OHseqPjRG9XP2xM5IMVU5HOxvkLIJskfZ4BAAA="
   },
   "Metadata": {
    "aws:cdk:path": "DicsCoreServiceStack/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
